--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "eagle.js": "^0.6.0",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-resource": "^1.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
